WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265996
[css-scoping] @scope invalidation
https://bugs.webkit.org/show_bug.cgi?id=265996
Summary
[css-scoping] @scope invalidation
Matthieu Dubet
Reported
2023-12-07 06:15:24 PST
When CSSOM changes the DOM tree, we need to verify that @scope is still matching (that the element is still in the scope donut)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-07 06:15:39 PST
<
rdar://problem/119313058
>
Matthieu Dubet
Comment 2
2023-12-08 01:23:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21494
EWS
Comment 3
2023-12-11 12:40:36 PST
Committed
271897@main
(2f8a6cd85ced): <
https://commits.webkit.org/271897@main
> Reviewed commits have been landed. Closing PR #21494 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug